cfparsymmetry table added to manual as appendix

--- a/doc/li100610.bib
+++ b/doc/li100610.bib
@@ -1,3 +1,5 @@
+
+
 @article{balcar75-1581,
 author={E. Balcar},
 title={Magnetic Moment Densities and Neutron Scattering},
@@ -92,7 +94,7 @@ volume=45,
 pages=2529,
 year=1992}
 
-@incollection{bauer09-1,
+@incollection{bauer09-183,
 author = {E. Bauer and M. Rotter},
    editor    = {E. Belin-Ferr},
    booktitle     = {Book Series on Complex Metallic Alloys},
@@ -255,7 +257,7 @@ note = "",
 issn = "0304-8853",
 doi = "DOI: 10.1016/j.jmmm.2009.02.118",
 url = "http://www.sciencedirect.com/science/article/B6TJJ-4VPV5MF-3/2/c3feda3f2ca57837550d61e257e318f7",
-author = "J. Kastil and P. Javorský and A.V. Andreev",
+author = "J. Kastil and P. Javorskï¿½ and A.V. Andreev",
 keywords = "Magnetocaloric effect",
 keywords = "DyNiAl",
 keywords = "Magnetism",
@@ -273,13 +275,13 @@ note = "Proceedings of the Eighth International Conference on Neutron Scattering
 issn = "0921-4526",
 doi = "DOI: 10.1016/j.physb.2006.05.046",
 url = "http://www.sciencedirect.com/science/article/B6TVH-4K9C5FG-5/2/f966eea79ac675318f41dbffd0120402",
-author = "J. Prchal and P. Javorský and K. Prokes and B. Ouladdiaf and A.V. Andreev",
+author = "J. Prchal and P. Javorskï¿½ and K. Prokes and B. Ouladdiaf and A.V. Andreev",
 keywords = "Rare-earth intermetallic compounds",
 keywords = "Magnetic properties",
 keywords = "Neutron diffraction",
 keywords = "High magnetic field",
 abstract = "
-We have succeeded to grow up a DyNiAl single crystal and performed a neutron-diffraction study to determine the magnetic structure. Only simple ferromagnetic phase was observed below down to . In the low-temperature phase below T1, the magnetic structure consists of ferromagnetic component oriented along the c-axis and antiferromagnetic component lying within the basal plane. It is thus a canted magnetic structure with the total moment of 8.2(1)[mu]B at 2 K. There are several field-induced transitions observed on the magnetization curves. The magnetic structure under high magnetic fields up to 14.5 T was also studied using neutron diffraction when the field was applied along a and along b (perpendicular to a) axis, respectively."
+We have succeeded to grow up a DyNiAl single crystal and performed a neutron-diffraction study to determine the magnetic structure. Only simple ferromagnetic phase was observed below down to . In the low-temperature phase below T1, the magnetic structure consists of ferromagnetic component oriented along the c-axis and antiferromagnetic component lying within the basal plane. It is thus a canted magnetic structure with the total moment of 8.2(1)[mu]B at 2ï¿½K. There are several field-induced transitions observed on the magnetization curves. The magnetic structure under high magnetic fields up to 14.5ï¿½T was also studied using neutron diffraction when the field was applied along a and along b (perpendicular to a) axis, respectively."
 }
 
 @ARTICLE{hashimoto07-547,
@@ -296,7 +298,7 @@ We have succeeded to grow up a DyNiAl single crystal and performed a neutron-dif
 }
 
 @article{tomala94-345,
-title = "Magnetic properties of ErPd2Si2 from magnetization Mössbauer and neutron diffraction measurements",
+title = "Magnetic properties of ErPd2Si2 from magnetization Mï¿½ssbauer and neutron diffraction measurements",
 journal = "Journal of Magnetism and Magnetic Materials",
 volume = "131",
 number = "3",
@@ -670,7 +672,7 @@ keywords = "Zintl-Klemm's concept"
 
 @article{sales01-245113,
 author={B. C. Sales and B. C. Chakoumakos and R. Jin and J. R. Thompson and D. Mandrus},
-title= {Structural,magnetic, thermal, and transport properties of X X8Ga Ga16 16Ge Ge30 30 (X=Eu, Sr, Ba)… single crystals},
+title= {Structural,magnetic, thermal, and transport properties of X X8Ga Ga16 16Ge Ge30 30 (X=Eu, Sr, Ba)ï¿½ single crystals},
 journal={ Phys. Rev. B},
 volume= 63,
 year=2001,
@@ -1023,8 +1025,8 @@ pages=224}
 }
 @article{szytula04-224b,
 author={A. Szytula and E. Wawrzynska and B. Penc and N. St\"usser and Z. Tomkowicz and A. Zygmunt},
-title={Magnetic properties and electronic structure of R$_3$T$_4$X$_4$ (R: La–Nd,
-Gd–Er; T: Mn, Cu; X: Ge, Sn) compounds},
+title={Magnetic properties and electronic structure of R$_3$T$_4$X$_4$ (R: Laï¿½Nd,
+Gdï¿½Er; T: Mn, Cu; X: Ge, Sn) compounds},
 journal={J. Alloy. Comp.},
 volume=367,
 year=2004,
@@ -9383,7 +9385,7 @@ year= 1987}
 
 
 @article{hillberg96-xx,
-   author    = {M.~Hillberg and W.~Wagener and M.~A.~C.~de Melo and H.~H.~Klauß 
+   author    = {M.~Hillberg and W.~Wagener and M.~A.~C.~de Melo and H.~H.~Klauï¿½ 
        and F.~J.~Litterst and W.~Loewenhaupt},
    title     = {Low temperature magnetic properties of NdCu$_2$},
    journal   = {preprint},
@@ -9395,7 +9397,7 @@ year= 1987}
 
 
 @article{hillberg96-xxa,
-   author    = {M.~Hillberg and W.~Wagener and M.~A.~C.~de Melo and H.~H.~Klauß 
+   author    = {M.~Hillberg and W.~Wagener and M.~A.~C.~de Melo and H.~H.~Klauï¿½ 
        and F.~J.~Litterst and W.~Loewenhaupt},
    title     = {Low temperature magnetic properties of NdCu$_2$},
    journal   = {preprint},
@@ -12620,7 +12622,7 @@ year=1974}
 
 @article{loewenhaupt94-26,
    author    = {M.~Loewenhaupt and Th.~Reif and P.~Svoboda and B.~Lebech},
-   journal   = {Risø- Report},
+   journal   = {Risï¿½- Report},
    pages     = {26},
    year      = {1994},
    volume    = {R-779(EN)}
@@ -12629,7 +12631,7 @@ year=1974}
 
 @article{loewenhaupt94-26a,
    author    = {M.~Loewenhaupt and Th.~Reif and P.~Svoboda and B.~Lebech},
-   journal   = {Risø- Report},
+   journal   = {Risï¿½- Report},
    pages     = {26},
    year      = {1994},
    volume    = {R-779(EN)}
@@ -12638,7 +12640,7 @@ year=1974}
 
 @article{loewenhaupt94-26aa,
    author    = {M.~Loewenhaupt and Th.~Reif and P.~Svoboda and B.~Lebech},
-   journal   = {Risø- Report},
+   journal   = {Risï¿½- Report},
    pages     = {26},
    year      = {1994},
    volume    = {R-779(EN)}
@@ -12647,7 +12649,7 @@ year=1974}
 
 @article{loewenhaupt94-26ab,
    author    = {M.~Loewenhaupt and Th.~Reif and P.~Svoboda and B.~Lebech},
-   journal   = {Risø- Report},
+   journal   = {Risï¿½- Report},
    pages     = {26},
    year      = {1994},
    volume    = {R-779(EN)}
@@ -12656,7 +12658,7 @@ year=1974}
 
 @article{loewenhaupt94-26b,
    author    = {M.~Loewenhaupt and Th.~Reif and P.~Svoboda and B.~Lebech},
-   journal   = {Risø- Report},
+   journal   = {Risï¿½- Report},
    pages     = {26},
    year      = {1994},
    volume    = {R-779(EN)}
@@ -12665,7 +12667,7 @@ year=1974}
 
 @article{loewenhaupt94-26c,
    author    = {M.~Loewenhaupt and Th.~Reif and P.~Svoboda and B.~Lebech},
-   journal   = {Risø- Report},
+   journal   = {Risï¿½- Report},
    pages     = {26},
    year      = {1994},
    volume    = {R-779(EN)}
@@ -14192,7 +14194,7 @@ year=1974}
 }
 
 
-@article{müller01-943,
+@article{mï¿½ller01-943,
    author    = {K.~H.~M\"uller and V.~N.~Narozhnyi},
    title     = {-},
    journal   = {Rep.~Prog.~Phys.},
@@ -15255,12 +15257,12 @@ year=1974}
 
 
 @book{parth94-1,
-   author    = {Parth¨¦ E, Gelato L, Chabot B, Penzo M, Cenzual K,
+   author    = {Parthï¿½ï¿½ E, Gelato L, Chabot B, Penzo M, Cenzual K,
        Gladyshevskii R},
    title     = {TYPIX Standardized Data and
        Crystal Chemical Characterization of Inorganic Structure Types},
    year      = {1994},
-   publisher = {Springer ¨C Verlag},
+   publisher = {Springer ï¿½C Verlag},
    address   = {Berlin, Heidelberg}
 }
 
