--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -7,6 +7,7 @@
 \evensidemargin2.4cm
 \usepackage{graphicx}
  \usepackage{makeidx}
+\usepackage{lscape}
 \makeindex
 \newcommand{\mbf}[1]{\mathbf #1}
 \newcommand{\V}[1]{ \stackrel{=}{\mathbf #1}}
@@ -435,6 +436,7 @@ of spherical harmonic functions $\sqrt{4\pi/(2l+1)}\sum_i Y_{lm}(\Omega_{i_s})$ 
 \input{tesseral.tex}
 \clearpage
 \input{stevens.tex}
+\input{cfparsymmetrytable.tex}
 \input{rotateBlm.tex}
 
 \clearpage
